--- a/style.css
+++ b/style.css
@@ -132,7 +132,25 @@ article {
   background-color: #ffd02f;
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 .block {
   display: flex;
+  width: 200px;
+  height: 250px;
+  margin: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.container1,
+.container2 {
+  display: flex;
+  align-content: stretch;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
