--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 body,
 html {
   overflow-x: hidden;
+  margin: 0px;
 }
 nav,
 .header-main,
@@ -53,7 +54,26 @@ nav,
   align-items: center;
   justify-content: center;
 }
-
+.font4 {
+  font-family: Roboto;
+  font-size: 32px; /* Изменено с 48px */
+  font-weight: 400; /* Без изменений */
+  line-height: 37.33px; /* Изменено с 56px */
+  letter-spacing: 0.67px; /* Изменено с 1px */
+  text-align: center; /* Без изменений */
+}
+.font5 {
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+.font6 {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+}
 ul {
   display: flex;
   justify-content: space-evenly;
@@ -116,6 +136,10 @@ a {
   color: #4262ff;
   text-decoration: underline;
 }
+.know-more-pon {
+  color: black;
+  text-decoration: underline;
+}
 article h3 {
   display: inline-block; /* Добавлено */
   margin-right: 10px; /* Пространство между заголовками */
@@ -137,7 +161,7 @@ article {
 }
 .block {
   display: flex;
-  width: 200px;
+  width: 240px;
   height: 250px;
   margin: 10px;
   flex-direction: column;
@@ -145,6 +169,7 @@ article {
   align-items: center;
   border-radius: 10px;
   cursor: pointer;
+  text-align: center;
 }
 .container1,
 .container2 {
@@ -153,4 +178,113 @@ article {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+}
+.block2 {
+  display: flex;
+  width: 240px; /* Изменено с 360px */
+  height: 322.67px; /* Изменено с 484px */
+  border-radius: 5.33px; /* Изменено с 8px */
+  margin: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.statistik2 {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.company-name-img {
+  width: 192px;
+  height: 41.33;
+}
+.know-more-pon-pon {
+  display: flex;
+  color: #4262ff;
+  border: #4262ff solid 2px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  margin-left: 90px; /* Возвращено в исходное значение */
+  width: 264px;
+  height: 46px;
+  border-radius: 24px;
+  margin-top: 10px;
+  margin-bottom: 100px;
+}
+.margin {
+  margin-top: 150px;
+}
+.container1-5 {
+  display: flex;
+  align-content: stretch;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.conect-to-miro {
+  width: 1120px;
+  height: 584px;
+  background-color: #050038;
+  border-radius: 16px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.lol {
+  display: flex;
+  justify-content: center;
+  margin-top: 200px;
+}
+.text-white {
+  color: white;
+}
+span {
+  text-decoration: underline;
+}
+.register {
+  display: flex;
+  background-color: #4262ff;
+  width: 251px; /* Возвращено в исходное значение */
+  height: 48px; /* Возвращено в исходное значение */
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  margin-top: 50px;
+}
+footer {
+  margin-top: 200px;
+  background: #050038;
+  display: flex;
+  flex-wrap: wrap; /* Позволяет элементам переноситься на новую строку */
+  align-items: center; /* Выравнивание элементов по вертикали */
+}
+footer img,
+footer h3 {
+  margin-left: 30px;
+}
+.additional-images {
+  margin-top: 20px; /* Пространство между текущей и следующей строкой */
+  margin-bottom: 50px;
+}
+.pod-block {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.pod-block img {
+  width: 48px;
+  height: 48px;
+}
+.img-wrapper {
+  display: flex;
+  align-items: center;
+  width: 500px;
+}
+.img-wrapper img {
+  margin-left: 20px;
 }
