--- a/style.css
+++ b/style.css
@@ -150,7 +150,8 @@ article {
 }
 .list {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  width: 90%;
 }
 .statistik {
   background-color: #ffd02f;
